lucas_kanade_hls/lucas_kanade_hls/logs/hls_run_csim_21644.backup.log
  **** HLS Build v2025.2 6295257
INFO: [HLS 200-2005] Using work_dir C:/Alex/Facultate/AN_III/OpticalFlow/Optical-Flow/lucas_kanade_hls/lucas_kanade_hls 
INFO: [HLS 200-2176] Writing Vitis IDE component file C:/Alex/Facultate/AN_III/OpticalFlow/Optical-Flow/lucas_kanade_hls/lucas_kanade_hls/vitis-comp.json
INFO: [HLS 200-10] Creating and opening component 'C:/Alex/Facultate/AN_III/OpticalFlow/Optical-Flow/lucas_kanade_hls/lucas_kanade_hls'.
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.amd.com/access/sources/dita/topic?Doc_Version=2025.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-2174] Applying component config ini file hls_config.cfg
INFO: [HLS 200-1465] Applying config ini 'syn.file=../LK_hls/src/lucas_kanade_hls.cpp' from hls_config.cfg(11)
INFO: [HLS 200-10] Adding design file 'C:/Alex/Facultate/AN_III/OpticalFlow/Optical-Flow/LK_hls/src/lucas_kanade_hls.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../LK_hls/src/lucas_kanade_hls.h' from hls_config.cfg(12)
INFO: [HLS 200-10] Adding design file 'C:/Alex/Facultate/AN_III/OpticalFlow/Optical-Flow/LK_hls/src/lucas_kanade_hls.h' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../LK_hls/src/lucas_kanade_pyramid.cpp' from hls_config.cfg(13)
INFO: [HLS 200-10] Adding design file 'C:/Alex/Facultate/AN_III/OpticalFlow/Optical-Flow/LK_hls/src/lucas_kanade_pyramid.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../LK_hls/src/lucas_kanade_pyramid.h' from hls_config.cfg(14)
INFO: [HLS 200-10] Adding design file 'C:/Alex/Facultate/AN_III/OpticalFlow/Optical-Flow/LK_hls/src/lucas_kanade_pyramid.h' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../LK_hls/src/pyramid_downsample.cpp' from hls_config.cfg(15)
INFO: [HLS 200-10] Adding design file 'C:/Alex/Facultate/AN_III/OpticalFlow/Optical-Flow/LK_hls/src/pyramid_downsample.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../LK_hls/src/pyramid_downsample.h' from hls_config.cfg(16)
INFO: [HLS 200-10] Adding design file 'C:/Alex/Facultate/AN_III/OpticalFlow/Optical-Flow/LK_hls/src/pyramid_downsample.h' to the project
INFO: [HLS 200-1465] Applying config ini 'tb.file=../LK_hls/src/main_tb.cpp' from hls_config.cfg(8)
INFO: [HLS 200-10] Adding test bench file 'C:/Alex/Facultate/AN_III/OpticalFlow/Optical-Flow/LK_hls/src/main_tb.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.top=lucas_kanade_pyramid' from hls_config.cfg(7)
INFO: [HLS 200-1465] Applying config ini 'flow_target=vivado' from hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.amd.com/access/sources/dita/topic?Doc_Version=2025.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying config ini 'part=xc7k70tfbg484-1' from hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7k70t-fbg484-1'
INFO: [HLS 200-1465] Applying config ini 'clock=10ns' from hls_config.cfg(9)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying config ini 'csim.setup=1' from hls_config.cfg(10)
INFO: [HLS 200-1465] Applying config ini 'package.output.format=ip_catalog' from hls_config.cfg(5)
INFO: [HLS 200-2176] Writing Vitis IDE component file C:/Alex/Facultate/AN_III/OpticalFlow/Optical-Flow/lucas_kanade_hls/lucas_kanade_hls/vitis-comp.json
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [HLS 200-2191] C-Simulation will use clang-16 as the compiler
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../../LK_hls/src/main_tb.cpp in debug mode
   Compiling ../../../../../LK_hls/src/pyramid_downsample.cpp in debug mode
In file included from ../../../../../LK_hls/src/main_tb.cpp:2:
In file included from ../../../../../LK_hls/src/lucas_kanade_hls.h:2:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\ap_fixed.h:9:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\etc/ap_common.h:668:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\etc/ap_private.h:68:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\hls_half.h:26:
In file included from C:/AMDDesignTools/2025.2/Vitis/include/etc/hls_half_fpo.h:19:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\hls_fpo.h:140:
In file included from C:/AMDDesignTools/2025.2/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/AMDDesignTools/2025.2/Vitis/include\gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/AMDDesignTools/2025.2/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
1 warning generated.
In file included from ../../../../../LK_hls/src/pyramid_downsample.cpp:1:
In file included from ../../../../../LK_hls/src/pyramid_downsample.h:2:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\ap_fixed.h:9:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\etc/ap_common.h:668:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\etc/ap_private.h:68:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\hls_half.h:26:
In file included from C:/AMDDesignTools/2025.2/Vitis/include/etc/hls_half_fpo.h:19:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\hls_fpo.h:140:
In file included from C:/AMDDesignTools/2025.2/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/AMDDesignTools/2025.2/Vitis/include\gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/AMDDesignTools/2025.2/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
In file included from ../../../../../LK_hls/src/pyramid_downsample.cpp:1:
../../../../../LK_hls/src/pyramid_downsample.h:6:5: error: unknown type name 'fixed_t'
    fixed_t in[H][W],
    ^
../../../../../LK_hls/src/pyramid_downsample.h:7:5: error: unknown type name 'fixed_t'
    fixed_t out[H/2][W/2]
    ^
../../../../../LK_hls/src/pyramid_downsample.cpp:5:5: error: unknown type name 'fixed_t'
    fixed_t in[H][W],
    ^
../../../../../LK_hls/src/pyramid_downsample.cpp:6:5: error: unknown type name 'fixed_t'
    fixed_t out[H/2][W/2]
    ^
../../../../../LK_hls/src/pyramid_downsample.cpp:13:47: error: use of undeclared identifier 'fixed_t'
                 in[i][j+1] + in[i+1][j+1]) * fixed_t(0.25);
                                              ^
1 warning and 5 errors generated.
mingw32-make: *** [csim.mk:97: obj/pyramid_downsample.o] Error 1
ERROR: [SIM 211-100] CSim file generation failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: CSIM Failed
INFO: [HLS 200-112] Total CPU user time: 2 seconds. Total CPU system time: 3 seconds. Total elapsed time: 11.057 seconds; peak allocated memory: 144.359 MB.
